control types on mouse wheel

--- a/core-v1/popup.html
+++ b/core-v1/popup.html
@@ -27,7 +27,14 @@
     </div>
 
     <div id="output-wrapper">
-        <textarea id="output" readonly title="Click to copy"></textarea>
+        <textarea id="output" title="Click to copy"></textarea>
+    </div>
+
+    <div id="option-wrapper">
+        <div class="option">
+            <input id="beginLorem" type="checkbox">
+            <label for="beginLorem">Begin with "Lorem ipsum dolor sit amet"</label>
+        </div>
     </div>
 
 </main>
