done format begin with text

--- a/core-v1/popup.html
+++ b/core-v1/popup.html
@@ -32,8 +32,8 @@
 
     <div id="option-wrapper">
         <div class="option">
-            <input id="beginLorem" type="checkbox">
-            <label for="beginLorem">Begin with "Lorem ipsum dolor sit amet"</label>
+            <input id="beginWith" type="checkbox" data-begin-text="Lorem ipsum dolor sit amet">
+            <label for="beginWith">Begin with "Lorem ipsum dolor sit amet"</label>
         </div>
     </div>
 
