done final beta

--- a/core-v1/popup.html
+++ b/core-v1/popup.html
@@ -14,6 +14,10 @@
 </head>
 <body class="lorip2k18">
 
+<header>
+    <h1 class="popup-title">Lipsum Generator</h1>
+</header>
+
 <main>
 
     <div id="types">
@@ -28,6 +32,7 @@
 
     <div id="output-wrapper">
         <textarea id="output" title="Click to copy"></textarea>
+        <span id="toast">Copied</span>
     </div>
 
     <div id="option-wrapper">
