refactoring file structure, add options sync features

--- a/core-v1/popup.html
+++ b/core-v1/popup.html
@@ -3,14 +3,13 @@
 <head>
     <title>Lorem Ipsum Generator</title>
     <meta charset="utf-8">
-    <script src="jquery-3.3.1.min.js"></script>
-    <script src="ion.rangeSlider.min.js"></script>
-    <script src="jquery.mousewheel.min.js"></script>
-    <script src="popup.js"></script>
-    <link href="ion.rangeSlider.css" rel='stylesheet' type='text/css'/>
-    <link href="ion.rangeSlider.skinModern.css" rel='stylesheet' type='text/css'/>
-    <link href="popup.css" rel='stylesheet' type='text/css'/>
-
+    <script src="assets/js/jquery-3.3.1.min.js"></script>
+    <script src="assets/js/ion.rangeSlider.min.js"></script>
+    <script src="assets/js/jquery.mousewheel.min.js"></script>
+    <script src="assets/js/popup.js"></script>
+    <link href="assets/css/ion.rangeSlider.css" rel='stylesheet' type='text/css'/>
+    <link href="assets/css/ion.rangeSlider.skinModern.css" rel='stylesheet' type='text/css'/>
+    <link href="assets/css/popup.css" rel='stylesheet' type='text/css'/>
 </head>
 <body class="lorip2k18">
 
@@ -39,6 +38,10 @@
         <div class="option">
             <input id="beginWith" type="checkbox" data-begin-text="Lorem ipsum dolor sit amet">
             <label for="beginWith">Begin with "Lorem ipsum dolor sit amet"</label>
+        </div>
+        <div class="option">
+            <input id="copyWhenOpen" type="checkbox">
+            <label for="copyWhenOpen">Auto copy when open extension</label>
         </div>
     </div>
 
