--- a/core-v1/popup.html
+++ b/core-v1/popup.html
@@ -46,7 +46,7 @@
 </main>
 
 <footer>
-    © 2018 <a href="https://phucbm.com">Quắn</a>
+    © 2018 <a href="https://github.com/phucbm/lorem-ipsum-generator" title="Go to Github">Lipsum Generator v1.0</a>
 </footer>
 
 </body>
