--- a/core-v1/popup.html
+++ b/core-v1/popup.html
@@ -28,7 +28,7 @@
     <div id="output-wrapper">
         <textarea id="output" title="Click to copy"></textarea>
         <span id="toast">Copied</span>
-        <div id="specs"></div>
+        <div id="specs">0 character</div>
         <a id="toggle-options">Options</a>
     </div>
 
@@ -46,7 +46,7 @@
 </main>
 
 <footer>
-    © 2018 <a href="https://github.com/phucbm/lorem-ipsum-generator" title="Go to Github">Lipsum Generator v1.0</a>
+    © 2018 <a href="https://github.com/phucbm/lorem-ipsum-generator" title="Go to Github repository">Quắn</a> - <a href="https://goo.gl/1WMgiZ" title="Rate this on Chrome store">Lipsum Generator v1.5</a>
 </footer>
 
 </body>
