v2: change button UI

--- a/lipsum-generator/popup.html
+++ b/lipsum-generator/popup.html
@@ -22,9 +22,13 @@
 
             <!-- generate buttons -->
             <div class="lipsum-generator__generate">
-                <button class="lipsum-generator__generate-button" data-lipsum-generate="paragraph">Paragraph</button>
-                <button class="lipsum-generator__generate-button" data-lipsum-generate="sentence">Sentence</button>
-                <button class="lipsum-generator__generate-button" data-lipsum-generate="word">Word</button>
+                <div class="lipsum-generator__generate-inner">
+                    <span class="lipsum-generator__generate-indicator" data-lipsum-generate-indicator></span>
+                    <button class="lipsum-generator__generate-button" data-lipsum-generate="paragraph">Paragraph
+                    </button>
+                    <button class="lipsum-generator__generate-button" data-lipsum-generate="sentence">Sentence</button>
+                    <button class="lipsum-generator__generate-button" data-lipsum-generate="word">Word</button>
+                </div>
             </div>
 
             <!-- quantity controls -->
