v2: add chrome storage sync

--- a/lipsum-generator/popup.html
+++ b/lipsum-generator/popup.html
@@ -24,7 +24,7 @@
 
 
 <!-- Lipsum Generator -->
-<div class="lipsum-generator">
+<div class="lipsum-generator loading">
     <div class="lipsum-generator__inner">
 
         <!-- body -->
@@ -68,7 +68,7 @@
                     </div>
                 </div>
 
-                <div class="lipsum-generator__quick-settings__prefix lipsum-generator__checkbox">
+                <div class="lipsum-generator__quick-settings__autocopy lipsum-generator__checkbox">
                     <label>Auto copy when open extension</label>
                     <div class="lipsum-generator__checkbox-input" data-lipsum-autocopy>
                         <input type="checkbox" name="autocopy"/>
