--- a/index.html
+++ b/index.html
@@ -6,100 +6,38 @@
     <link rel="icon" href="assets/img/128.png" type="image/x-icon">
 
     <!-- stylesheet -->
+    <link rel="stylesheet" href="assets/css/extension-variables.css">
+    <link rel="stylesheet" href="assets/css/extension-ui.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
+<main id="lipsum" class="app-container">
+    <div class="app-body">
 
-<!-- Lipsum Generator -->
-<div class="lipsum-generator loading">
-    <div class="lipsum-generator__inner">
-
-        <!-- body -->
-        <div class="lipsum-generator__body">
-
-            <!-- generate buttons -->
-            <div class="lipsum-generator__generate">
-                <div class="lipsum-generator__generate-inner">
-                    <span class="lipsum-generator__generate-indicator" data-lipsum-generate-indicator></span>
-                    <button class="lipsum-generator__generate-button" data-lipsum-generate="word">Word</button>
-                    <button class="lipsum-generator__generate-button" data-lipsum-generate="sentence">Sentence</button>
-                    <button class="lipsum-generator__generate-button" data-lipsum-generate="paragraph">Paragraph
-                    </button>
-                </div>
+        <div class="btn-group">
+            <div class="btn-group-item">
+                <button class="btn" data-type="word">Word</button>
             </div>
-
-            <!-- quantity controls -->
-            <div class="lipsum-generator__quantity-controls lipsum-range-slider">
-                <input type="text" class="lipsum-generator__quantity-range" data-lipsum-range name="my_range" value=""
-                       data-type="single"
-                       data-min="0"
-                       data-max="20"
-                       data-from="0"
-                />
+            <div class="btn-group-item">
+                <button class="btn" data-type="sentence">Sentence</button>
             </div>
-
-            <!-- result -->
-            <div class="lipsum-generator__result">
-                <textarea class="lipsum-generator__result-textarea" data-lipsum-result data-lipsum-copy
-                          readonly></textarea>
-                <div class="lipsum-generator__noti" data-lipsum-noti>Copied</div>
+            <div class="btn-group-item">
+                <button class="btn" data-type="paragraph">Paragraph</button>
             </div>
-
-            <!-- quick settings -->
-            <div class="lipsum-generator__quick-settings">
-
-                <div class="lipsum-generator__quick-settings__prefix lipsum-generator__checkbox">
-                    <label>Begin with "<span data-lipsum-prefix-text>lorem ipsum dolor sit amet</span>"</label>
-                    <div class="lipsum-generator__checkbox-input" data-lipsum-prefix>
-                        <input type="checkbox" name="prefix"/>
-                    </div>
-                </div>
-
-                <div class="lipsum-generator__quick-settings__autocopy lipsum-generator__checkbox">
-                    <label>Auto copy when open extension</label>
-                    <div class="lipsum-generator__checkbox-input" data-lipsum-autocopy>
-                        <input type="checkbox" name="autocopy"/>
-                    </div>
-                </div>
-
-                <div class="lipsum-generator__quick-settings__text-transform lipsum-generator-select">
-                    <select class="up">
-                        <option value="capitalizeFirstWordInSentence" selected>Capitalize the first word in a
-                            sentence.
-                        </option>
-                        <option value="capitalize">Capitalize</option>
-                        <option value="uppercase">UPPERCASE</option>
-                        <option value="lowercase">lowercase</option>
-                    </select>
-                </div>
-
-            </div>
-
-
-            <!-- copy -->
-            <div class="lipsum-generator__copy">
-                <button class="lipsum-generator__copy-button" data-lipsum-copy>Copy</button>
-            </div>
-
-        </div>
-
-
-        <!-- footer -->
-        <div class="lipsum-generator__footer">
-            <div class="lipsum-generator__footer-inner">
-                © 2021 - <a
-                    href="https://chrome.google.com/webstore/detail/lipsum-generator/fepopmflofkppphpkfjdbmimglkeifna"
-                    title="Rate this on Chrome store">Lipsum Generator</a>
+            <div class="btn-group-item">
+                <button class="btn" data-type="list">List</button>
             </div>
         </div>
-
 
     </div>
-</div>
+
+</main>
 
 
 <!-- script -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/extension-ui.js"></script>
 <script src="assets/js/main.js"></script>
 <script src="assets/js/lipsum.js"></script>
 
