--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             </div>
         </div>
 
+        <br>
+
+        <div class="range-slider">
+            <input type="range" min="1" max="100" value="50" data-quantity>
+        </div>
+
     </div>
 
 </main>
