style(ui): checkbox

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
             <input type="range" min="1" max="100" value="0" data-quantity>
         </div>
 
+        <br>
+
+        <div class="checkbox">
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox">Label</label>
+        </div>
+
     </div>
 
 </main>
