style(ui): easy select

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="assets/css/extension-variables.css">
+    <link rel="stylesheet" href="assets/css/easy-select.css">
     <link rel="stylesheet" href="assets/css/extension-ui.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -43,6 +44,14 @@
             <label for="checkbox">Label</label>
         </div>
 
+        <div class="dropdown">
+            <select data-easy-select>
+                <option value="1">one</option>
+                <option value="2">two</option>
+                <option value="3">three</option>
+            </select>
+        </div>
+
     </div>
 
 </main>
@@ -50,6 +59,7 @@
 
 <!-- script -->
 <script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/easy-select.min.js"></script>
 <script src="assets/js/extension-ui.js"></script>
 <script src="assets/js/main.js"></script>
 <script src="assets/js/lipsum.js"></script>
