--- a/index.html
+++ b/index.html
@@ -34,26 +34,67 @@
         <br>
 
         <div class="range-slider">
-            <input type="range" min="1" max="100" value="0" data-quantity>
+            <label>
+                <input type="range" min="1" max="100" value="0" data-quantity>
+            </label>
+        </div>
+
+        <br>
+
+        <div class="textarea">
+            <label>
+                <textarea readonly>
+                    Lorem ipsum dolor sit amet ex. Leo vitae justo scelerisque cursus. Accumsan curae consectetur neque. Egestas nibh felis in habitant.
+
+Nisl massa efficitur habitant fames urna torquent sapien. Turpis eleifend ex taciti diam sollicitudin magnis quis. Ante massa eu ultrices. Fames mollis eget vulputate eros lobortis. Per dignissim nibh dictum nec sed rhoncus. Quis non hac taciti turpis dictum.
+
+Cursus posuere faucibus cubilia. Lectus ridiculus mattis feugiat habitasse sollicitudin. Neque congue morbi phasellus dictumst. Montes vestibulum dapibus a dictumst placerat commodo. Platea tristique penatibus ipsum habitasse eleifend semper venenatis. Vestibulum leo mollis eros imperdiet diam etiam. Penatibus rhoncus integer leo.
+
+Suspendisse parturient condimentum phasellus velit efficitur. Sit massa ante tortor viverra. Cursus etiam nec sapien odio in consectetur id. Hendrerit odio accumsan ridiculus posuere ad dictum sed. Fames condimentum velit quam ligula integer dapibus erat. Parturient vivamus posuere molestie.
+
+Fermentum finibus rhoncus justo. Pretium nam neque condimentum ridiculus per cubilia. Litora mollis urna elit magnis. Placerat dis rutrum mattis augue curabitur posuere. Turpis sit amet euismod aenean ipsum. Tempus rhoncus euismod sodales ridiculus magna donec aliquet.
+                </textarea>
+            </label>
         </div>
 
         <br>
 
         <div class="checkbox">
-            <input type="checkbox" id="checkbox">
-            <label for="checkbox">Label</label>
+            <input type="checkbox" id="prefix">
+            <label for="prefix">Begin with "lorem ipsum dolor sit amet"</label>
+        </div>
+        <div class="checkbox">
+            <input type="checkbox" id="auto-copy">
+            <label for="auto-copy">Auto copy when open extension</label>
         </div>
 
+        <br>
+
         <div class="dropdown">
-            <select data-easy-select>
-                <option value="1">one</option>
-                <option value="2">two</option>
-                <option value="3">three</option>
-            </select>
+            <label>
+                <select data-easy-select>
+                    <option value="capitalizeFirstWordInSentence" selected>
+                        Capitalize the first word in a sentence.
+                    </option>
+                    <option value="capitalize">Capitalize</option>
+                    <option value="uppercase">UPPERCASE</option>
+                    <option value="lowercase">lowercase</option>
+                </select>
+            </label>
+        </div>
+
+        <br>
+
+        <div>
+            <button class="btn btn-block btn-copy">Copy</button>
         </div>
 
     </div>
-
+    <div class="app-footer">
+        © 2021 - <a
+            href="https://chrome.google.com/webstore/detail/lipsum-generator/fepopmflofkppphpkfjdbmimglkeifna"
+            title="Rate this on Chrome store">Lipsum Generator</a>
+    </div>
 </main>
 
 
