refactor(core): minify code

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="textarea">
             <label>
-                <textarea readonly></textarea>
+                <textarea readonly data-output></textarea>
             </label>
         </div>
 
