feat(core): output length

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
             </label>
         </div>
 
-        <div class="textarea">
+        <div class="output-wrapper">
             <label>
                 <textarea readonly data-output data-copy-text></textarea>
             </label>
+            <span class="output-length" data-output-length>0</span>
         </div>
 
         <div>
