feat(core): Checkboxes control

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
         <div>
             <div class="checkbox">
-                <input type="checkbox" id="prefix">
+                <input type="checkbox" id="prefix" data-checkbox="prefix">
                 <label for="prefix">Begin with "lorem ipsum dolor sit amet"</label>
             </div>
             <div class="checkbox">
-                <input type="checkbox" id="auto-copy">
+                <input type="checkbox" id="auto-copy" data-checkbox="auto-copy">
                 <label for="auto-copy">Auto copy when open extension</label>
             </div>
         </div>
