feat(core): textTransformControl

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <div class="dropdown">
             <label>
-                <select data-easy-select>
+                <select data-easy-select data-text-transform>
                     <option value="capitalizeFirstWordInSentence" selected>
                         Capitalize the first word in a sentence.
                     </option>
