feat(core): lipsum list

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button class="btn" data-type="paragraph">Paragraph</button>
             </div>
             <div class="btn-group-item">
-                <button class="btn" data-type="list">List</button>
+                <button class="btn" data-type="list">List (HTML)</button>
             </div>
         </div>
 
@@ -38,9 +38,7 @@
         </div>
 
         <div class="output-wrapper">
-            <label>
-                <textarea readonly data-output data-copy-text></textarea>
-            </label>
+            <div data-output data-copy-text class="output-area"></div>
             <span class="output-length" data-output-length>0</span>
         </div>
 
