feat(core): load settings from storage

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div>
             <div class="checkbox">
                 <input type="checkbox" id="prefix" data-checkbox="prefix">
-                <label for="prefix">Begin with "lorem ipsum dolor sit amet"</label>
+                <label for="prefix">Begin with "Lorem ipsum dolor sit amet"</label>
             </div>
             <div class="checkbox">
                 <input type="checkbox" id="auto-copy" data-checkbox="auto-copy">
