feat(core): add loading layer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <main id="lipsum" class="app-container">
-    <div class="app-body">
+    <div class="app-body loading">
 
         <div class="btn-group is-indicator">
             <div class="btn-group-item">
