build: update media and web page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Generate lorem ipsum dummy text in a drop of a hat.">
+    <meta name="robots" content="index, follow"/>
+    <meta name="twitter:card" content="Generate lorem ipsum dummy text in a drop of a hat."/>
+    <meta name="twitter:site" content="Lipsum Generator"/>
+    <meta name="twitter:creator" content="@phucbm"/>
+    <meta property="og:url" content="https://lipsum-generator.netlify.app"/>
+    <meta property="og:title" content="Generate lorem ipsum dummy text in a drop of a hat."/>
+    <meta property="og:description"
+          content="Generate lorem ipsum dummy text in 4 types of content: Words, Sentences, Paragraphs, and List (HTML). Available as a Chrome Extension and a Web App."/>
+    <meta property="og:image"
+          content="https://raw.githubusercontent.com/phucbm/lipsum-generator/master/media/v3/1280-web-app.jpg"/>
+
     <title>Lipsum Generator v3</title>
     <link rel="icon" href="assets/img/128.png" type="image/x-icon">
 
@@ -79,6 +92,7 @@
                     <button class="btn btn-block btn-copy disabled" data-copy-slug>Copy Slug</button>
                 </div>
             </div>
+
         </div>
 
     </div>
@@ -88,6 +102,15 @@
             title="Rate this on Chrome store" target="_blank">Lipsum Generator</a> - <a
             href="https://github.com/phucbm/lipsum-generator" target="_blank">GitHub</a>
     </div>
+
+    <div class="product-hunt-badge">
+        <a href="https://www.producthunt.com/posts/lipsum-generator?utm_source=badge-review&utm_medium=badge&utm_souce=badge-lipsum-generator#discussion-body"
+           target="_blank"><img
+                src="https://api.producthunt.com/widgets/embed-image/v1/review.svg?post_id=325264&theme=light"
+                alt="Lipsum Generator - Generate lorem ipsum dummy text in a drop of a hat. | Product Hunt"
+                style="width: 250px; height: 45px;" width="250" height="45"/></a>
+    </div>
+
 </main>
 
 
